= 0.1.3

* Added none_of and not_all_of conjunctions.

* Changed the between restriction to take either a range, a tuple, or two
values.

* Support multiple joins in one having statement through having(:posts =>
:comments)

* Added a CHANGELOG

= 0.1.2

* Add LIKE and NOT LIKE restrictions

* Replace active record objects with their ids if passed as the value for a
resriction.

= 0.1.1

* Add group_by

* Raise informative exceptions when columns or associations are not found for
a given filter

* Alias is_null restriction to nil and null

* Alias comparison restrictions to gt, lt, lte, gte

* Add greater_than_or_equal_to and less_than_or_equal_to restrictions.