@@ -1,5 +1,11 @@
 = 0.1.3
 
+* Fixed a bug in filter.rb when trying to chain to named_scopes or things that
+are otherwise not named_filters.
+
+* Made a named_filters accessor for getting the list of filters that apply to
+a particular class.
+
 * Added none_of and not_all_of conjunctions.
 
 * Changed the between restriction to take either a range, a tuple, or two
